; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/webvtt/extr_webvtt.c_webvtt_scan_time.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/webvtt/extr_webvtt.c_webvtt_scan_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"%2u:%2u.%3u\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"%u:%2u:%2u.%3u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @webvtt_scan_time(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca [4 x i32], align 16
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = getelementptr inbounds [4 x i32], [4 x i32]* %6, i64 0, i64 1
  %9 = getelementptr inbounds [4 x i32], [4 x i32]* %6, i64 0, i64 2
  %10 = getelementptr inbounds [4 x i32], [4 x i32]* %6, i64 0, i64 3
  %11 = call i32 (i8*, i8*, i32*, i32*, i32*, ...) @sscanf(i8* %7, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32* %8, i32* %9, i32* %10)
  %12 = icmp eq i32 %11, 3
  br i1 %12, label %13, label %18

13:                                               ; preds = %2
  %14 = getelementptr inbounds [4 x i32], [4 x i32]* %6, i64 0, i64 0
  store i32 0, i32* %14, align 16
  %15 = getelementptr inbounds [4 x i32], [4 x i32]* %6, i64 0, i64 0
  %16 = call i32 @MakeTime(i32* %15)
  %17 = load i32*, i32** %5, align 8
  store i32 %16, i32* %17, align 4
  store i32 1, i32* %3, align 4
  br label %31

18:                                               ; preds = %2
  %19 = load i8*, i8** %4, align 8
  %20 = getelementptr inbounds [4 x i32], [4 x i32]* %6, i64 0, i64 0
  %21 = getelementptr inbounds [4 x i32], [4 x i32]* %6, i64 0, i64 1
  %22 = getelementptr inbounds [4 x i32], [4 x i32]* %6, i64 0, i64 2
  %23 = getelementptr inbounds [4 x i32], [4 x i32]* %6, i64 0, i64 3
  %24 = call i32 (i8*, i8*, i32*, i32*, i32*, ...) @sscanf(i8* %19, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i32* %20, i32* %21, i32* %22, i32* %23)
  %25 = icmp eq i32 %24, 4
  br i1 %25, label %26, label %30

26:                                               ; preds = %18
  %27 = getelementptr inbounds [4 x i32], [4 x i32]* %6, i64 0, i64 0
  %28 = call i32 @MakeTime(i32* %27)
  %29 = load i32*, i32** %5, align 8
  store i32 %28, i32* %29, align 4
  store i32 1, i32* %3, align 4
  br label %31

30:                                               ; preds = %18
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %30, %26, %13
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @sscanf(i8*, i8*, i32*, i32*, i32*, ...) #1

declare dso_local i32 @MakeTime(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
